--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype = html>
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.1/TweenMax.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.1/TweenMax.min.js"></script>
     <script type = "text/javascript" src = "index.js"> </script>
     <link rel = "stylesheet" type = "text/css" href = "./css/index.css">
     <link rel="icon" href="./assets/favicon.png">
