--- a/K@812/k812.html
+++ b/K@812/k812.html
@@ -3,8 +3,8 @@
 <head>
     <link rel = "stylesheet" type = "text/css" href = "./css/k812.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="icon" href="../assets/favicon.png">
     <title>Kitchen@812</title>
-
 </head>
 
 <body>
