--- a/about/about.html
+++ b/about/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel = "stylesheet" type = "text/css" href = "./css/about.css">
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="../assets/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />photo
     <title>About Me</title>
 
