--- a/botw/bankofthewest.html
+++ b/botw/bankofthewest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel = "stylesheet" type = "text/css" href = "./css/botw.css">
-    <link rel="icon" href="./assets/favicon.png">
+    <link rel="icon" href="../assets/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <title>Bank of the West</title>
