--- a/safely/safely.html
+++ b/safely/safely.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel = "stylesheet" type = "text/css" href = "./css/safely.css">
-    <link rel="icon" href="../../assets/favicon.png">
+    <link rel="icon" href="../assets/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Safely</title>
 
