--- a/snickerpage/snickerpage.html
+++ b/snickerpage/snickerpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel = "stylesheet" type = "text/css" href = "./css/snickerpage.css">
-    <link rel="icon" href="../../assets/favicon.png">
+    <link rel="icon" href="../assets/favicon.png">
 
     <title>Snickerdoodle</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
