--- a/index.html
+++ b/index.html
@@ -316,16 +316,20 @@
         <div id = "leftside">
         <div id = "text">
             <div id = "projectlist"> 
-                <a> Here are some projects I've worked on: </a>
+                <a> My favorite project is </a>
                 <ul>
-                    <li> <a class = "link" id = "snickerpage" href = "snickerpage/snickerpage.html"> Snickerdoodle</a>, a card game designed to enhance divergent thinking in 2nd and 3rd grade students </li>
+                    <li> <a class = "link" id = "chimepage" href = "chime/chimepage.html"> Chime</a>, which empowers sexual assault survivors share their stories. </li>
+                </ul>     
+                <a> Some of my other projects are </a>
+                <ul>
+                    <li> <a class = "link" id = "snickerpage" href = "snickerpage/snickerpage.html"> Snickerdoodle</a>, a card game designed to enhance creativity in 2nd and 3rd grade students </li>
                     <li> <a class = "link" id = "hustlelink" href = "hustle/hustle.html"> Hustle</a>, a workout app </li>
                     <li> <a class = "link" id = "safelylink" href = "safely/safely.html"> Safely</a>, an app to help pedestrians get home safely </li>
                 </ul>
                 <a> I've also done some work as a </a>
                 <ul>
                     <li> <a class = "link" id = "botwlink" href = "botw/bankofthewest.html"> product development intern </a> at Bank of the West </li>
-                    <li> business analyst doing <a class = "link" id = "k812link" href = "K@812/k812.html"> web and logo design work </a> at a nonprofit start-up incubator </li>
+                    <li> design intern doing <a class = "link" id = "k812link" href = "k@812/k812.html"> web and logo design work </a> at a nonprofit start-up incubator </li>
                     <li> a project manager of the consulting division of Phi Beta Lambda, a student-run business organization </li>
                     </ul>
                 </div>
@@ -333,6 +337,7 @@
             </div>
         <div id = "rightside">
         <div class = "projectdisplay">
+            <img id = "chimegif" src ="./assets/gif1.gif">
             <img id = "snickerslide3" src = "./assets/snicker.jpeg">
             <img id = "hustleslide" src = "./assets/hustle.png">
             <img id = "safelyscreens" src = "./assets/safely.png">
