--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <a> I've also done some work as a </a>
                 <ul>
                     <li> <a class = "link" id = "botwlink" href = "botw/bankofthewest.html"> product development intern </a> at Bank of the West </li>
-                    <li> design intern doing <a class = "link" id = "k812link" href = "k@812/k812.html"> web and logo design work </a> at a nonprofit start-up incubator </li>
+                    <li> <a class = "link" id = "k812link" href = "k@812/k812.html"> design intern </a> at a nonprofit start-up incubator </li>
                     <li> a project manager of the consulting division of Phi Beta Lambda, a student-run business organization </li>
                     </ul>
                 </div>
